--- a/README.org
+++ b/README.org
@@ -2,6 +2,10 @@
 
 Ce repository contient des exemples de code et des katas pour découvrir et apprendre Erlang.
 
+Pour démarrer la boucle tdd (utilise rebar):
+
+    $ ./tdd.sh
+
 ** Plan de progression
 
 *** Une fonction simple, en local
@@ -12,7 +16,6 @@ Ce repository contient des exemples de code et des katas pour découvrir et appr
   - Struct
 - Pattern-matching
 
-Build et test à la main. Pas de ```rebar``` ou autre outil complexe pour le moment.
   
 *** Traitement parallèle
 
